--- a/app/Resources/ESFileBundle/translations/messages.fr.yml
+++ b/app/Resources/ESFileBundle/translations/messages.fr.yml
@@ -12,7 +12,7 @@ Supprimer: Supprimer
 'Ajouter un fichier dans le dossier': 'Ajouter un fichier dans le dossier'
 Accueil: Accueil
 'Liste des fichiers': 'Liste des fichiers'
-Dossier: __Dossier
+Dossier: Dossier
 'Dossier Parent': 'Dossier Parent'
 'Ajouter un dossier': 'Ajouter un dossier'
 Renomer: Renomer
